fixing duplication of surefire and increasing version