@@ -242,18 +242,6 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
-        <configuration>
-          <skip>false</skip>
-          <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
-          <systemPropertyVariables>
-            <classpath>${project.basedir}/target</classpath>
-          </systemPropertyVariables>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5</version>
         <configuration>
@@ -399,7 +387,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
+        <version>2.19.1</version>
         <configuration>
           <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
           <systemPropertyVariables>
